--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
-	"devDependencies": {
-		"lerna": "^2.11.0",
-		"typescript": "^3.0.0-dev.20180626"
-	}
+  "private": true,
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/@ryancavanaugh/pkg1",
+      "**/@ryancavanaugh/pkg2",
+      "**/@ryancavanaugh/pkg3"
+    ]
+  },
+  "devDependencies": {
+    "typescript": "^3.0.0-dev.20180626"
+  }
 }
