--- a/packages/pkg1/tsconfig.json
+++ b/packages/pkg1/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "../tsconfig.settings.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "baseUrl": "src",
+    "paths": {
+      "~/*": ["*"]
+    }
   }
 }
