--- a/packages/pkg2/tsconfig.json
+++ b/packages/pkg2/tsconfig.json
@@ -2,9 +2,11 @@
   "extends": "../tsconfig.settings.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "baseUrl": "src",
+    "paths": {
+      "~/*": ["*"]
+    }
   },
-  "references": [
-    { "path": "../pkg1" }
-  ]
+  "references": [{ "path": "../pkg1" }]
 }
