test root imports

--- a/packages/pkg1/tsconfig.json
+++ b/packages/pkg1/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "lib",
     "rootDir": "src",
     "baseUrl": "src",
+    "composite": true,
     "paths": {
       "~/*": ["*"]
     }
