--- a/packages/pkg3/tsconfig.json
+++ b/packages/pkg3/tsconfig.json
@@ -2,7 +2,12 @@
   "extends": "../tsconfig.settings.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "baseUrl": "src",
+    "composite": true,
+    "paths": {
+      "~/*": ["*"]
+    }
   },
   "references": [{ "path": "../pkg1" }, { "path": "../pkg2" }]
 }
