--- a/packages/pkg1/package.json
+++ b/packages/pkg1/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^3.0.0-dev.20180626"
+    "declaration-bundler-webpack-plugin": "^1.0.3",
+    "ts-loader": "^5.3.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.0.0-dev.20180626",
+    "webpack": "^4.26.1"
   }
 }
