--- a/packages/pkg3/package.json
+++ b/packages/pkg3/package.json
@@ -16,6 +16,10 @@
     "@ryancavanaugh/pkg2": "^3.0.2"
   },
   "devDependencies": {
-    "typescript": "^3.0.0-dev.20180626"
+    "declaration-bundler-webpack-plugin": "^1.0.3",
+    "ts-loader": "^5.3.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.0.0-dev.20180626",
+    "webpack": "^4.26.1"
   }
 }
