--- a/packages/pkg1/tsconfig.json
+++ b/packages/pkg1/tsconfig.json
@@ -5,8 +5,6 @@
     "rootDir": "src",
     "baseUrl": "src",
     "composite": true,
-    "paths": {
-      "~/*": ["*"]
-    }
+    "plugins": [{ "transform": "../../transformers/relativize-imports.ts" }]
   }
 }
