--- a/packages/pkg2/package.json
+++ b/packages/pkg2/package.json
@@ -15,9 +15,12 @@
     "@ryancavanaugh/pkg1": "^3.0.2"
   },
   "devDependencies": {
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-imports": "^1.5.1",
     "declaration-bundler-webpack-plugin": "^1.0.3",
     "ts-loader": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "ttypescript": "^1.5.5",
     "typescript": "^3.0.0-dev.20180626",
     "webpack": "^4.26.1"
   }
