--- a/packages/pkg2/tsconfig.json
+++ b/packages/pkg2/tsconfig.json
@@ -5,9 +5,7 @@
     "rootDir": "src",
     "baseUrl": "src",
     "composite": true,
-    "paths": {
-      "~/*": ["*"]
-    }
+    "plugins": [{ "transform": "../../transformers/relativize-imports.ts" }]
   },
   "references": [{ "path": "../pkg1" }]
 }
